<resources>
    <string name="app_name">Theme Changer</string>
    <string name="action_settings">Settings</string>
    <string name="theme_dark">Theme.AppCompat</string>
    <string name="choose_theme_label">Choose theme:</string>
    <string name="theme_light">Theme.AppCompat.Light</string>
    <string name="theme_light_dark_action_bar">Theme.AppCompat.Light.DarkActionBar</string>
    <string name="apply">Apply</string>
</resources>
