<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme_label"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioGroup
            android:id="@+id/themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/theme_light_dark_action_bar"
            >

            <RadioButton
                android:id="@+id/theme_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light"
                />

            <RadioButton
                android:id="@+id/theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark"
                />

            <RadioButton
                android:id="@+id/theme_light_dark_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light_dark_action_bar"
                />
        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        />

</LinearLayout>
